--- a/.github/workflows/publishTweet.yml
+++ b/.github/workflows/publishTweet.yml
@@ -23,6 +23,6 @@ jobs:
     - run: |
         git config user.name albertocruzluis
         git config user.email albertocruzluisdev@gmail.com
-        git add *
+        git add ./data/*
         git commit -m "[bot] Publish Tweet of collection"
         git push origin master
